packages/svelte/tests/compiler-errors/samples/unbalanced-curly-component/main.svelte
<svelte:options runes />
<script>
	import Component from "./Component.svelte";
</script>

<Component onclick={true}} />